update: x axis overflow of page prevented

--- a/styles/general.css
+++ b/styles/general.css
@@ -70,6 +70,8 @@ html {
   scroll-padding-top: 7rem;
 
   height: 100%;
+
+  overflow-x: hidden;
 }
 
 body {  padding-top: 7rem; }
